Renamed PoormansSynchronization to PoormansAwaiter Defined private constructor for PoormansAwaiter so that it is gotten via PoormansAwaiter.GetContext()
Signed-off-by: Alexander Karagulamos <developer@netrifik.com>

--- a/PoormansTPL.csproj
+++ b/PoormansTPL.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PoormansSynchronization.cs" />
+    <Compile Include="PoormansAwaiter.cs" />
     <Compile Include="PoormansTask.cs" />
     <Compile Include="PoormansFuture.cs" />
     <Compile Include="Program.cs" />
