You can now await PoormansTask via a custom PoormansAwaiter. Also changed a few class and method names to better reflect intent.

--- a/PoormansTPL.csproj
+++ b/PoormansTPL.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="PoormansAwaiter.cs" />
     <Compile Include="PoormansTask.cs" />
-    <Compile Include="PoormansFuture.cs" />
+    <Compile Include="PoormansSynchronizer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
