--- a/PoormansTPL.csproj
+++ b/PoormansTPL.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Threading\Tasks\PoormansSynchronizer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Threading\Tasks\PoormansWorkerThread.cs" />
+    <Compile Include="Threading\Tasks\PoormansThreadPool.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
